assets/css/main.css
body {
  color: white;
  
   background: rgb(45, 15, 15);
  justify-content:center ;
 }

.nav {
  text-align: center;
  font-size: large;
}

.block {   
  padding: 1% 5% 1%;
}

.vidalign {

padding: 1em;
text-align: center;

}

.vidcap {
justify-content: center;
color: white;
font-weight: normal;
font-style: normal;
text-align: center;
}

.header {
   display: flex;
   justify-content: center;
  }

.mypre {
  background-color: #000;
  color: rgb(191, 0, 0);

 }


p, li, ul {
  list-style-type: none;
   font-family: "Pixelated MS Sans Serif";
   src: url("ms_sans_serif.woff") format("woff");
   src: url("ms_sans_serif.woff2") format("woff2");
   color: white;
   font-weight: normal;
   font-style: normal;
   font-size: 16px;

}


h1, h2, h3, h4 {
   text-align: center;
   font-family: "Pixelated MS Sans Serif";
   src: url("ms_sans_serif.woff") format("woff");
   src: url("ms_sans_serif.woff2") format("woff2");
   color: white;
   font-weight: normal;
   font-style: normal;
}

footer {
padding: 1rem;
  }
  
@media only screen and (max-width: 950px) { 
  pre {
    font-size : 3pt;
  }
  img[src*='#center'] { 
    display: block;
    margin: auto;
}
}

.blogtitle {
  font-size: large;
}

a:link {
  color: #818181;
  text-decoration: none;
}

a:visited {
  color:#ffae00;
  text-decoration: none;

}

a:hover {
  color: #ff0081;
  text-decoration: none;
}

